# ITMO

./: .gitignore  README.md  hotPosts.cpp
Algorithms/Algebra/: Algebra.cpp
Algorithms/Array Utils/: ArrayUtils.cpp  ArrayUtils.h
Algorithms/Geometry/: DoubleGeometry.cpp  IntGeometry.cpp  LongGeometry.cpp
Algorithms/Strings/: Hash.h  HashWithManyModules.h  KMP.h  Strings.cpp  Z-function.h
Automaton programming/AMutation/: main  main.cpp
Automaton programming/BCrossover/: crossover.in  main  main.cpp
Automaton programming/CTrees/: main.cpp  trees.in
Automaton programming/DStart/: main.cpp
Automaton programming/EDiscrete/: main.cpp
Automaton programming/FContinuous/: main.cpp
Automaton programming/HMinimization/: main.cpp
Automaton programming/IOneMax/: main.cpp
ComputationalGeometry/A/: main.cpp  tests.h
ComputationalGeometry/C/: main.cpp
ComputationalGeometry/G/: main.cpp
ComputationalGeometry/H/: inside.in
ComputationalGeometry/I/: main  point.in
Cpp/: node.cpp  run.cpp  set.cpp
Cpp/bigint/: CMakeCache.txt  (+12 more)
Haskell/: 140311.hs  140318.hs  Base.hs  test.hs
Mathlogic/: CMakeLists.txt  HW2.cpp  HW4.cpp  ProofChecker.cpp  ProofChecker.h  ProofDeduction.cpp  ProofDeduction.h  main.cpp
Mathlogic/Cpp/: CMakeLists.txt  Expressions.cpp  Expressions.h  HW1.cpp  HW2.cpp  HW3.cpp  Parser.cpp  Parser.h  Utils.h  main.cpp
Mathlogic/Cpp/tests/: 01.in
Templates/: Main.java  ct.cpp  main.cpp  main.py  main_multitest.cpp  main_multitest_no_files.cpp  main_no_files.cpp  main_tc.cpp
Программирование на С/: double_list.c  list.h  main.c  main2.c
(+876 files in other folders)
